fix: fix some bugs and complete some details
Signed-off-by: wanyoulc <15694528183@163.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -59,6 +59,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/axios-mock-adapter": "^1.10.0",
     "@types/d3": "^5.7.2",
+    "@types/esprima": "^4.0.2",
     "@types/flat": "^5.0.1",
     "@types/jest": "^25.2.1",
     "@types/jest-expect-message": "^1.0.3",
@@ -74,6 +75,7 @@
     "@types/yup": "^0.29.1",
     "axios-mock-adapter": "^1.19.0",
     "es-arguments": "^1.0.2",
+    "esprima": "^4.0.1",
     "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
     "import-sort-style-eslint": "^6.0.0",
