fix: append missing permission about list on namespaces within cluster mode
Signed-off-by: STRRL <str_ruiling@outlook.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -57,6 +57,9 @@ rules:
   - apiGroups: [ "" ]
     resources:
       - nodes
+{{- if .Values.clusterScoped }}
+      - namespaces
+{{- end }}
     verbs: [ "get", "list", "watch" ]
 
 ---
