use config for dns server port
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -79,6 +79,8 @@ spec:
           {{- end }}
           - name: CHAOS_DNS_SERVICE_NAME
             value: {{ .Values.dnsServer.name }}
+          - name: CHAOS_DNS_SERVICE_PORT
+            value: !!str {{ .Values.dnsServer.grpcPort }}
         volumeMounts:
           - name: webhook-certs
             mountPath: /etc/webhook/certs
