--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -223,6 +223,8 @@ dnsServer:
 
   name: chaos-mesh-dns-server
 
+  grpcPort: 9288
+
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
