make chaos dashboard be compliable with namespace scoped mode (#1110)
* fix(dashboard): make chaos dashboard be compliable with namespace scoped mode

Signed-off-by: STRRL <str_ruiling@outlook.com>

* chore: tring to make go vet happy

Signed-off-by: STRRL <str_ruiling@outlook.com>

* chore: update install.sh

Signed-off-by: STRRL <str_ruiling@outlook.com>

* chore: reformat

Signed-off-by: STRRL <str_ruiling@outlook.com>

* improvement(dashboard): refine API, only list namespaces which could inject chaos

Signed-off-by: STRRL <str_ruiling@outlook.com>

* improvement: do not need list namespaces permission anymore

Signed-off-by: STRRL <str_ruiling@outlook.com>

* fix: append missing permission about list on namespaces within cluster mode

Signed-off-by: STRRL <str_ruiling@outlook.com>

* fix: change url: from namespaces to chaos-available-namespaces

Signed-off-by: STRRL <str_ruiling@outlook.com>

* improvement: keeping API: /namespaces and mark it as deprecated

Signed-off-by: STRRL <str_ruiling@outlook.com>

Co-authored-by: ti-srebot <66930949+ti-srebot@users.noreply.github.com>
Signed-off-by: STRRL <str_ruiling@outlook.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -56,8 +56,10 @@ metadata:
 rules:
   - apiGroups: [ "" ]
     resources:
-      - namespaces
       - nodes
+{{- if .Values.clusterScoped }}
+      - namespaces
+{{- end }}
     verbs: [ "get", "list", "watch" ]
 
 ---
