--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -57,9 +57,9 @@ rules:
   - apiGroups: [ "" ]
     resources:
       - nodes
-      - services
 {{- if .Values.clusterScoped }}
       - namespaces
+      - services
 {{- end }}
     verbs: [ "get", "list", "watch" ]
 
@@ -77,7 +77,7 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
 rules:
   - apiGroups: [ "" ]
-    resources: [ "configmaps" ]
+    resources: [ "configmaps", "services" ]
     verbs: [ "get", "list", "watch" ]
 
 ---
