optimize: add some control logic to stop all other tests when mock test failed replace mockjs to chancejs
Signed-off-by: wanyoulc <15694528183@163.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:api": "react-scripts test --testRunner=jest-circus/runner --env=./apiTestEnv",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,6 +59,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios-mock-adapter": "^1.10.0",
+    "@types/chance": "^1.1.0",
     "@types/d3": "^5.7.2",
     "@types/esprima": "^4.0.2",
     "@types/flat": "^5.0.1",
@@ -74,14 +76,16 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/yup": "^0.29.1",
     "axios-mock-adapter": "^1.19.0",
+    "chance": "^1.1.7",
     "es-arguments": "^1.0.2",
     "esprima": "^4.0.1",
     "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
     "import-sort-style-eslint": "^6.0.0",
+    "jest-circus": "^26.6.3",
+    "jest-environment-jsdom": "^26.6.2",
     "jest-expect-message": "^1.0.2",
     "lint-staged": "^10.1.7",
-    "mockjs": "^1.1.0",
     "prettier": "^2.0.5",
     "prettier-plugin-import-sort": "^0.0.4",
     "redux-logger": "^3.0.6",
