chore: add api test path filter
Signed-off-by: wanyoulc <15694528183@163.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:api": "react-scripts test --testRunner=jest-circus/runner --env=./apiTestEnv",
+    "test:api": "react-scripts test --testRunner=jest-circus/runner --env=./apiTestEnv --testPathPattern=api.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
