--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Install Chaos Mesh
         run: |
+          export CLUSTER="chart-testing"
           hack/local-up-chaos-mesh.sh
 
       - name: Run integration test
