--- a/config/crd/bases/chaos-mesh.org_podiochaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podiochaos.yaml
@@ -149,6 +149,10 @@ spec:
                 - type
                 type: object
               type: array
+            container:
+              description: 'TODO: support multiple different container to inject in
+                one pod'
+              type: string
             pid:
               description: Pid represents a running toda process id
               format: int64
