Adding PodSecurityPolicy option to helm chart
Signed-off-by: Stefan Kolesnikowicz <stefan.kolesnikowicz@achievers.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -29,6 +29,9 @@ spec:
   {{- if .Values.chaosDaemon.hostNetwork }}
       hostNetwork: true
   {{- end }}
+  {{- if .Values.chaosDaemon.serviceAccount }}
+      serviceAccount: {{ .Values.chaosDaemon.serviceAccount }}
+  {{- end }}
       hostIPC: true
       hostPID: true
       containers:
