--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -75,6 +75,11 @@ chaosDaemon:
 
   podAnnotations: {}
 
+  serviceAccount: chaos-daemon
+
+  # enable a podSecurityPolicy(psp)
+  podSecurityPolicy: false
+
   # runtime specifies which container runtime to use. Currently
   # we only supports docker and containerd.
   runtime: docker
