address the comments
Signed-off-by: Gallardot <tttick@163.com>

--- a/config/crd/bases/chaos-mesh.org_jvmchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_jvmchaos.yaml
@@ -45,8 +45,8 @@ spec:
               - oom
               - ccf
               - tce
-              - delay4svr
-              - tce4svr
+              - delay4servlet
+              - tce4servlet
               type: string
             cfl:
               description: CpuFullload represents the detail about JVM chaos action
