address the comments
Signed-off-by: Gallardot <tttick@163.com>

--- a/examples/jvm/jvm-delay4servlet-example.yaml
+++ b/examples/jvm/jvm-delay4servlet-example.yaml
@@ -1,7 +1,7 @@
 apiVersion: chaos-mesh.org/v1alpha1
 kind: JVMChaos
 metadata:
-  name: jvm-delay4svr-example
+  name: jvm-delay4servlet-example
   namespace: chaos-testing
 spec:
   action: delay4servlet
