--- a/config/crd/bases/chaos-mesh.org_jvmchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_jvmchaos.yaml
@@ -36,7 +36,8 @@ spec:
           properties:
             action:
               description: 'Action defines the specific jvm chaos action. Supported
-                action: delay, return, script, cfl, oom, ccf, tce, delay4svr, tce4svr'
+                action: delay, return, script, cfl, oom, ccf, tce, delay4servlet,
+                tce4servlet'
               enum:
               - delay
               - return
