--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -925,11 +925,12 @@ spec:
               properties:
                 method:
                   description: Method represents HTTP request method, such as GET,
-                    POST, or PUT. Default is GET
+                    POST, DELETE or PUT. Default is GET
                   enum:
                   - GET
                   - POST
                   - PUT
+                  - DELETE
                   type: string
                 offset:
                   description: Offset represents delay fluctuation time
@@ -1191,11 +1192,12 @@ spec:
                   type: string
                 method:
                   description: Method represents HTTP request method, such as GET,
-                    POST, or PUT. Default is GET
+                    POST, DELETE or PUT. Default is GET
                   enum:
                   - GET
                   - POST
                   - PUT
+                  - DELETE
                   type: string
                 querystring:
                   description: QueryString represents HTTP request query string
