--- a/images/chaos-daemon/Dockerfile
+++ b/images/chaos-daemon/Dockerfile
@@ -6,7 +6,7 @@ ARG HTTP_PROXY
 ENV http_proxy $HTTP_PROXY
 ENV https_proxy $HTTPS_PROXY
 
-RUN apt-get update && apt-get install -y tzdata iptables ipset stress-ng iproute2 fuse util-linux && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y tzdata iptables ipset stress-ng iproute2 fuse util-linux procps && rm -rf /var/lib/apt/lists/*
 
 RUN update-alternatives --set iptables /usr/sbin/iptables-legacy
 
@@ -17,3 +17,4 @@ COPY --from=pingcap/chaos-binary /bin/toda /usr/local/bin/toda
 COPY --from=pingcap/chaos-binary /bin/pause /usr/local/bin/pause
 COPY --from=pingcap/chaos-binary /bin/suicide /usr/local/bin/suicide
 COPY --from=pingcap/chaos-binary /toda-glibc /usr/local/lib/toda-glibc
+COPY --from=pingcap/chaos-binary /bin/nscat /usr/local/bin/nscat
