restore bpfki port
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -118,6 +118,7 @@ spec:
           ports:
             - name: grpc
               containerPort: {{ .Values.bpfki.grpcPort }}
+              hostPort: {{ .Values.bpfki.grpcPort }}
 {{- end }}
       volumes:
         - name: socket-path
