--- a/images/chaos-daemon/Dockerfile
+++ b/images/chaos-daemon/Dockerfile
@@ -17,4 +17,4 @@ COPY --from=pingcap/chaos-binary /bin/toda /usr/local/bin/toda
 COPY --from=pingcap/chaos-binary /bin/pause /usr/local/bin/pause
 COPY --from=pingcap/chaos-binary /bin/suicide /usr/local/bin/suicide
 COPY --from=pingcap/chaos-binary /toda-glibc /usr/local/lib/toda-glibc
-COPY --from=pingcap/chaos-binary /bin/nscat /usr/local/bin/nscat
+COPY --from=pingcap/chaos-binary /bin/nsexec /usr/local/bin/nsexec
