Added helm option, hostNetwork unittests
Signed-off-by: Stephan van Ellewee <svanellewee@entersekt.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -42,6 +42,9 @@ spec:
 {{ toYaml .Values.controllerManager.resources | indent 12 }}
         command:
           - /usr/local/bin/chaos-controller-manager
+        {{- if .Values.controllerManager.allowHostNetworkTesting }}
+          - -allowhostnetworktesting
+        {{- end }}
         env:
           - name: NAMESPACE
             valueFrom:
