Adding env var to enable host networking testing
Signed-off-by: Stephan van Ellewee <svanellewee@entersekt.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -42,9 +42,6 @@ spec:
 {{ toYaml .Values.controllerManager.resources | indent 12 }}
         command:
           - /usr/local/bin/chaos-controller-manager
-        {{- if .Values.controllerManager.allowHostNetworkTesting }}
-          - -allowhostnetworktesting
-        {{- end }}
         env:
           - name: NAMESPACE
             valueFrom:
@@ -54,6 +51,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: ALLOW_HOST_NETWORK_TESTING
+            value: "{{ .Values.controllerManager.allowHostNetworkTesting }}"
           - name: TARGET_NAMESPACE
             value: {{ .Values.controllerManager.targetNamespace }}
           - name: CLUSTER_SCOPED
